<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:padding="@dimen/dp_12"
        android:src="@drawable/icon_back_8e" />

    <TextView
        android:id="@+id/tvHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_24"
        android:padding="@dimen/dp_12"
        android:text="@string/login_help"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_114"
        android:text="@string/login_with_phone"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llLoginPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogin"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_72"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/background_bottom_gray"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_6"
        android:paddingBottom="@dimen/sp_8">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_input_phone" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_2"
            android:background="@color/color_C5CBD2"
            android:paddingBottom="@dimen/dp_8" />

        <EditText
            android:id="@+id/etLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/login_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLoginPhone"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_14"
        android:drawableStart="@drawable/login_info"
        android:drawablePadding="@dimen/dp_4"
        android:text="@string/login_with_phone_tip"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:id="@+id/llWxLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginTip"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/backgroud_gray_radius_4"
        android:gravity="center">

        <TextView
            android:id="@+id/tvPhoneLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/dp_8"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/login_center_with_phone"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvJump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/dp_20"
        android:text="@string/login_jump"
        android:textColor="@color/text_color_dark"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:id="@+id/llLoginOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLoginWithWx"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="@dimen/dp_68"
            android:layout_height="1dp"
            android:background="@color/text_color_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_12"
            android:text="@string/login_other_tip"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_68"
            android:layout_height="1dp"
            android:background="@color/text_color_dark" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginWithWx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_14"
        android:drawableTop="@drawable/login_weixin"
        android:drawablePadding="@dimen/dp_4"
        android:text="@string/login_with_wx"
        android:textColor="@color/text_color_dark"
        android:visibility="gone" />
</RelativeLayout>