<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
        >

    <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_back_8e"
            android:layout_marginTop="@dimen/dp_24"
            android:padding="@dimen/dp_12"
            />

    <TextView
            android:id="@+id/tvHelper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_12"
            android:text="@string/login_help"
            android:textSize="@dimen/dp_14"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/text_color_light"
            android:layout_marginTop="@dimen/dp_24"
            />

    <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phone_verify"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/dp_22"
            android:textColor="@color/text_color_light"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp_114"
            />


    <TextView
            android:id="@+id/tvVerifyTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_14"
            android:layout_below="@+id/tvLogin"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_14"
            android:textColor="@color/text_color_light"
            android:lineSpacingExtra="@dimen/dp_6"
            tools:text="已发送短信验证码至15823456789\n输入4位验证码即可登录"
            />


    <LinearLayout
            android:id="@+id/llLoginPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLogin"
            android:weightSum="4"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_50"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="@dimen/dp_6"
            android:paddingBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_72"
            >

        <com.zhboy.ycwwz.base_library.widgets.PasteTwoEditText
                android:id="@+id/etVerify1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:focusable="true"
                style="@style/verify_edittext"
                />

        <com.zhboy.ycwwz.base_library.widgets.PasteTwoEditText
                android:id="@+id/etVerify2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/verify_edittext"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                />

        <com.zhboy.ycwwz.base_library.widgets.PasteTwoEditText
                android:id="@+id/etVerify3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/verify_edittext"
                android:layout_marginEnd="@dimen/dp_24"
                />

        <com.zhboy.ycwwz.base_library.widgets.PasteTwoEditText
                android:id="@+id/etVerify4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/verify_edittext"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llLoginPhone"
            android:layout_marginTop="@dimen/dp_18"
            android:gravity="center"
            >

        <TextView
                android:id="@+id/tvNoReceiveVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_phone_no_verify_tip"
                android:textSize="@dimen/dp_14"
                android:textColor="@color/text_color_light"
                />

        <TextView
                android:id="@+id/tvNoReceiveVerifyTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--"
                android:textSize="@dimen/dp_14"
                android:textColor="@color/color_C43413"
                android:visibility="visible"
                />

        <TextView
                android:id="@+id/tvNoVerifyTimeTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_phone_verify_tip2"
                android:textSize="@dimen/dp_14"
                android:visibility="visible"
                android:textColor="@color/text_color_light"
                />

        <TextView
                android:id="@+id/tvRefreshCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_phone_verify_refresh"
                android:textColor="@color/color_C43413"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4"
                android:background="@drawable/backgroud_c43413_radius_30"
                android:visibility="gone"
                />
    </LinearLayout>

</RelativeLayout>